test/error/invalid_directive_location.true
File 0, line 1, col 14:
invalid directive location

